--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
                 </table>
 
                 <!--Da popunim prazan prostor...ostao bez ideje :)-->
+                <!--Ovaj link nece da otvori na netu: This page is trying to load scripts from unauthenticaded sources.-->
                 <div>
                         <iframe src="http://www.itobuka.matf.bg.ac.rs/index.html" height="400" width="540"></iframe>
                 </div>
@@ -181,6 +182,7 @@
 <div class="jumbotron jumbotron-fluid text-center bg-dark text-info mt-5 mb-0" >
     <p><a href="#pocetak" class="text-white lead">Povratak na vrh stranice</a></p>
     <p>autor: <a href="mailto:nstulic@gmail.com?&subject=Komentar%20sajta&body=Slobodno%20ostavite%20Vas%20komenar%20sta%20mislite%20o%20sajtu!" target="_top"> nstulic@gmail.com</a></p>
+    
   </div>
     
 </body>
